@@ -15,6 +15,7 @@ Important changes in 2.11 (2022-05-XX):
 * Bugfix: Smart encode selected the video format for cue sheet tracks, regardless
   of the input format. This has been fixed now.
 * Bugfix: Fix crash when DVD/Bluray should be transcoded to audio only.
+* Bugfix: If track performer is empty, try album performer instead.
 
 Important changes in 2.10 (2022-04-26):
 
